open swagger page automatically when run the program

--- a/StealCatApi/Properties/launchSettings.json
+++ b/StealCatApi/Properties/launchSettings.json
@@ -3,25 +3,28 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5000" // HTTP, no SSL
+      "applicationUrl": "http://localhost:5000",
+      "sslPort": 0
     }
   },
   "profiles": {
     "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "index.html",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "commandName": "IISExpress",
-      "url": "http://localhost:5000",
-      "sslUrl": null 
+      }
     },
     "ProjectName": {
       "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "index.html",
+      "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "url": "http://localhost:5001", 
-      "sslUrl": null 
+      }
     }
   }
 }
